--- a/app/src/main/res/layout/country_detail.xml
+++ b/app/src/main/res/layout/country_detail.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<net.huannguyen.conductorexample.countrydetail.CountryDetailView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -131,4 +132,4 @@
             android:layout_weight="1"
             android:textAppearance="@style/CountryDataValue"/>
     </LinearLayout>
-</LinearLayout>
+</net.huannguyen.conductorexample.countrydetail.CountryDetailView>
