--- a/app/src/main/res/layout/country_item.xml
+++ b/app/src/main/res/layout/country_item.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <net.huannguyen.conductorexample.FourThreeImageView
+    <net.huannguyen.conductorexample.misc.FourThreeImageView
         android:id="@+id/flag"
         android:layout_width="match_parent"
         android:layout_height="0dp"
