--- a/app/src/main/res/layout/country_detail.xml
+++ b/app/src/main/res/layout/country_detail.xml
@@ -8,128 +8,106 @@
     android:clipChildren="false"
     android:clipToPadding="false">
 
+    <ImageView
+        android:id="@+id/flag"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:adjustViewBounds="true"
+        android:foreground="@drawable/ripple"
+        tools:ignore="ContentDescription"
+        tools:src="@android:color/white"/>
+
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
-        <ImageView
-            android:id="@+id/flag"
+        <TableLayout
+            android:id="@+id/detail_group"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:adjustViewBounds="true"
-            android:foreground="@drawable/ripple"
-            tools:ignore="ContentDescription"
-            tools:src="@android:color/white"/>
+            android:layout_height="match_parent"
+            android:padding="12dp"
+            android:background="?android:attr/colorBackground">
+
+            <TableRow android:padding="12dp">
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="@string/capital"
+                    style="@style/CountryDataLabel"/>
+
+                <TextView
+                    android:id="@+id/capital"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    style="@style/CountryDataValue"/>
+            </TableRow>
+
+            <TableRow android:padding="12dp">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/population"
+                    style="@style/CountryDataLabel"/>
+
+                <TextView
+                    android:id="@+id/population"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    style="@style/CountryDataValue"/>
+            </TableRow>
+
+            <TableRow android:padding="12dp">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/language"
+                    style="@style/CountryDataLabel"/>
+
+                <TextView
+                    android:id="@+id/language"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    style="@style/CountryDataValue"/>
+            </TableRow>
+
+            <TableRow android:padding="12dp">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/currency"
+                    style="@style/CountryDataLabel"/>
+
+                <TextView
+                    android:id="@+id/currency"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    style="@style/CountryDataValue"/>
+            </TableRow>
+
+            <TableRow android:padding="12dp">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/timezone"
+                    style="@style/CountryDataLabel"/>
+
+                <TextView
+                    android:id="@+id/timezone"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    style="@style/CountryDataValue"/>
+            </TableRow>
+        </TableLayout>
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/favourite_fab"
             android:layout_width="56dp"
             android:layout_height="56dp"
-            android:layout_gravity="bottom|end"
+            android:layout_gravity="top|end"
             android:scaleType="center"
             android:src="@drawable/ic_favorite"
-            android:translationX="-28dp"
-            android:translationY="28dp"/>
+            android:layout_marginTop="-28dp"
+            android:layout_marginEnd="28dp"
+            android:layout_marginRight="28dp"/>
     </FrameLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:padding="12dp">
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/capital"
-            android:textAppearance="@style/CountryDataLabel"/>
-
-        <TextView
-            android:id="@+id/capital"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:textAppearance="@style/CountryDataValue"/>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="12dp">
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/population"
-            android:textAppearance="@style/CountryDataLabel"/>
-
-        <TextView
-            android:id="@+id/population"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:textAppearance="@style/CountryDataValue"/>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="12dp">
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/language"
-            android:textAppearance="@style/CountryDataLabel"/>
-
-        <TextView
-            android:id="@+id/language"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:textAppearance="@style/CountryDataValue"/>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="12dp">
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/currency"
-            android:textAppearance="@style/CountryDataLabel"/>
-
-        <TextView
-            android:id="@+id/currency"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:textAppearance="@style/CountryDataValue"/>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="12dp">
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/timezone"
-            android:textAppearance="@style/CountryDataLabel"/>
-
-        <TextView
-            android:id="@+id/timezone"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:textAppearance="@style/CountryDataValue"/>
-    </LinearLayout>
 </net.huannguyen.conductorexample.countrydetail.CountryDetailView>
