--- a/app/src/main/res/layout-land/country_detail.xml
+++ b/app/src/main/res/layout-land/country_detail.xml
@@ -7,6 +7,7 @@
 
 <net.huannguyen.conductorexample.countrydetail.CountryDetailView
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -30,14 +31,15 @@
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/favourite_fab"
-            android:layout_width="56dp"
-            android:layout_height="56dp"
-            android:src="@drawable/ic_favorite"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/ic_favorite"
             android:scaleType="center"
             android:layout_gravity="bottom|end"
-            android:layout_marginEnd="28dp"
-            android:layout_marginRight="28dp"
-            android:layout_marginBottom="-28dp"/>
+            android:layout_marginEnd="@dimen/fab_margin_right"
+            android:layout_marginRight="@dimen/fab_margin_right"
+            android:layout_marginBottom="@dimen/fab_margin_vertical"
+            app:fabSize="normal"/>
     </FrameLayout>
 
     <TableLayout
@@ -57,7 +59,7 @@
 
             <TextView
                 android:id="@+id/capital"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 style="@style/CountryDataValue"/>
         </TableRow>
